--- a/index.html
+++ b/index.html
@@ -29,9 +29,81 @@
 
 </head>
 <body>
+    <header class="main_nav">
+        <div class="container">
+            <div class="twelve columns">
 
+            </div>
+        </div>
+    </header>
 
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <div class="container main">
+        <div class="row">
+            <div class="four columns portfolio">
+                <img src="images/backpacker.jpg" />
+            </div>
+            <div class="four columns portfolio">
+                <img src="images/desert_cycle.jpg" />
+            </div>
+            <div class="four columns portfolio">
+                <img src="images/italy_bikes.jpg" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="four columns portfolio">
+                <img src="images/on_safari.jpg" />
+            </div>
+            <div class="four columns portfolio">
+                <img src="images/overlook_mtn.jpg" />
+            </div>
+            <div class="four columns portfolio">
+                <img src="images/paris_couple.jpg" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="four columns portfolio">
+                <img src="images/single_rider.jpg" />
+            </div>
+            <div class="four columns portfolio">
+                <img src="images/sunset_beach.jpg" />
+            </div>
+            <div class="four columns portfolio">
+                <img src="images/toes_sand.jpg" />
+            </div>
+        </div>
+
+    </div>  <!-- container -->
+
+    <div class="row green">
+        <div class="container">
+            <div class="four columns">
+                <img class="avatar" src="images/amy.jpg" />
+            </div>
+            <div class="eight columns">
+                <h2>About Me</h2>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                    when an unknown printer took a galley of type and scrambled it to make a type
+                    specimen book. It has survived not only five centuries, but also the leap into
+                    electronic typesetting, remaining essentially unchanged. It was popularised in the
+                    1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
+                    recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="container">
+            <div class="row twelve columns"></div>
+            <div class="row twelve columns"></div>
+            <p>
+                &copy; 2017 Valentyn Bilousov project. All rights reserved.
+            </p>
+        </div>
+    </footer>
+    <!-- End Document
+      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
