--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
 </head>
 <body>
-    <header class="main_nav">
+    <header class="main_nav green">
         <div class="container">
             <div class="twelve columns">
-
+                <div class="logo"><a href="#">Valentyn Bilousov</a></div>
             </div>
         </div>
     </header>
@@ -60,7 +60,7 @@
                 <img src="images/paris_couple.jpg" />
             </div>
         </div>
-        <div class="row">
+        <div class="row" style="margin-bottom: 10%">
             <div class="four columns portfolio">
                 <img src="images/single_rider.jpg" />
             </div>
@@ -80,8 +80,8 @@
                 <img class="avatar" src="images/amy.jpg" />
             </div>
             <div class="eight columns">
-                <h2>About Me</h2>
-                <p>
+                <h2 class="bio">About Me</h2>
+                <p class="bio">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
                     when an unknown printer took a galley of type and scrambled it to make a type
@@ -96,9 +96,18 @@
 
     <footer>
         <div class="container">
+            <div class="row twelve columns">
+                <ul class="social">
+                    <li class="facebook"><a href="#"><i class="fa fa-facebook-square fa-lg"></i></a></li>
+                    <li class="twitter"><a href="#"><i class="fa fa-twitter-square fa-lg"></i></a></li>
+                    <li class="instagram"><a href="#"><i class="fa fa-instagram fa-lg"></i></a></li>
+                    <li class="flickr"><a href="#"><i class="fa fa-flickr fa-lg"></i></a></li>
+                    <li class="youtube"><a href="#"><i class="fa fa-youtube-square fa-lg"></i></a></li>
+                    <li class="linkedin"><a href="#"><i class="fa fa-linkedin-square fa-lg"></i></a></li>
+                </ul>
+            </div>
             <div class="row twelve columns"></div>
-            <div class="row twelve columns"></div>
-            <p>
+            <p class="copyright">
                 &copy; 2017 Valentyn Bilousov project. All rights reserved.
             </p>
         </div>
